--- a/notebooks/2.2_requirements_collection.ipynb
+++ b/notebooks/2.2_requirements_collection.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "887cf7d2",
    "metadata": {},
    "outputs": [
@@ -35,8 +35,8 @@
    ],
    "source": [
     "# Tuỳ chỉnh thông số\n",
-    "CITY = \"London\"  # Tên thành phố\n",
-    "DAYS = 7          # Số ngày dự báo\n",
+    "CITY = \"Hanoi\"  # Tên thành phố\n",
+    "DAYS = 7          # Số ngày dự báo, tối đa 7\n",
     "RAW_DIR = \"../data/raw\"  # Thư mục lưu dữ liệu thô\n",
     "\n",
     "# city_slug + RAW_CITY_DIR\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "7e2833ad",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "0b44e0e6",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
        "4  London  51.50853 -0.12574  open-meteo  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "id": "a1ada0fe",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved snapshot -> ../data/raw/london/forecast_london_7d_20250921_0312.csv\n"
+      "Saved snapshot -> ../data/raw/london/forecast_london_7d_20250921_0317.csv\n"
      ]
     }
    ],
