Comments in code cell updated

--- a/notebooks/2.2_requirements_collection.ipynb
+++ b/notebooks/2.2_requirements_collection.ipynb
@@ -23,23 +23,14 @@
    "execution_count": null,
    "id": "887cf7d2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "City: London | Horizon (days): 7\n",
-      "Raw city dir: ../data/raw/london\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Tuỳ chỉnh thông số\n",
     "CITY = \"Hanoi\"  # Tên thành phố\n",
     "DAYS = 7          # Số ngày dự báo, tối đa 7\n",
     "RAW_DIR = \"../data/raw\"  # Thư mục lưu dữ liệu thô\n",
     "\n",
-    "# city_slug + RAW_CITY_DIR\n",
+    "# city_slug và RAW_CITY_DIR\n",
     "import re, pathlib\n",
     "city_slug = re.sub(r\"[^a-z0-9]+\", \"-\", CITY.lower()).strip(\"-\")\n",
     "RAW_CITY_DIR = f\"{RAW_DIR}/{city_slug}\"\n",
@@ -51,20 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "7e2833ad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved active config -> c:\\Users\\Letrongvangggg\\Desktop\\Lab2_ADY201m\\.lab2_config.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# --- Persist config for other notebooks ---\n",
     "import json, os\n",
     "CONFIG_PATH = \"../.lab2_config.json\"\n",
     "\n",
@@ -83,128 +65,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "0b44e0e6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>temp_max</th>\n",
-       "      <th>temp_min</th>\n",
-       "      <th>precipitation_sum</th>\n",
-       "      <th>wind_speed_10m_max</th>\n",
-       "      <th>city</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>source</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2025-09-20</td>\n",
-       "      <td>20.5</td>\n",
-       "      <td>13.7</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>25.9</td>\n",
-       "      <td>London</td>\n",
-       "      <td>51.50853</td>\n",
-       "      <td>-0.12574</td>\n",
-       "      <td>open-meteo</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2025-09-21</td>\n",
-       "      <td>15.7</td>\n",
-       "      <td>10.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>21.6</td>\n",
-       "      <td>London</td>\n",
-       "      <td>51.50853</td>\n",
-       "      <td>-0.12574</td>\n",
-       "      <td>open-meteo</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2025-09-22</td>\n",
-       "      <td>16.9</td>\n",
-       "      <td>9.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>17.9</td>\n",
-       "      <td>London</td>\n",
-       "      <td>51.50853</td>\n",
-       "      <td>-0.12574</td>\n",
-       "      <td>open-meteo</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2025-09-23</td>\n",
-       "      <td>15.5</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>13.9</td>\n",
-       "      <td>London</td>\n",
-       "      <td>51.50853</td>\n",
-       "      <td>-0.12574</td>\n",
-       "      <td>open-meteo</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2025-09-24</td>\n",
-       "      <td>17.5</td>\n",
-       "      <td>9.8</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13.4</td>\n",
-       "      <td>London</td>\n",
-       "      <td>51.50853</td>\n",
-       "      <td>-0.12574</td>\n",
-       "      <td>open-meteo</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         date  temp_max  temp_min  precipitation_sum  wind_speed_10m_max  \\\n",
-       "0  2025-09-20      20.5      13.7                0.3                25.9   \n",
-       "1  2025-09-21      15.7      10.3                0.0                21.6   \n",
-       "2  2025-09-22      16.9       9.3                0.0                17.9   \n",
-       "3  2025-09-23      15.5       7.3                0.9                13.9   \n",
-       "4  2025-09-24      17.5       9.8                0.0                13.4   \n",
-       "\n",
-       "     city       lat      lon      source  \n",
-       "0  London  51.50853 -0.12574  open-meteo  \n",
-       "1  London  51.50853 -0.12574  open-meteo  \n",
-       "2  London  51.50853 -0.12574  open-meteo  \n",
-       "3  London  51.50853 -0.12574  open-meteo  \n",
-       "4  London  51.50853 -0.12574  open-meteo  "
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, json, datetime, pandas as pd, pathlib, sys\n",
     "\n",
@@ -257,18 +121,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "a1ada0fe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved snapshot -> ../data/raw/london/forecast_london_7d_20250921_0317.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "from pathlib import Path\n",
