--- a/notebooks/2.3_understanding_preparation.ipynb
+++ b/notebooks/2.3_understanding_preparation.ipynb
@@ -12,13 +12,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d92b09ac",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5c04a9a2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Load config written by 2.2 ---\n",
     "import json, os, re\n",
     "from pathlib import Path\n",
     "\n",
@@ -62,15 +67,13 @@
     "def slugify(s: str) -> str:\n",
     "    return re.sub(r\"[^a-z0-9]+\", \"-\", str(s).lower()).strip(\"-\")\n",
     "\n",
-    "# --- OPTIONAL: set CITY here for testing; comment out to auto-detect from RAW\n",
     "try:\n",
-    "    CITY  # if defined in a previous cell, keep it\n",
+    "    CITY  \n",
     "except NameError:\n",
-    "    CITY = None  # e.g., \"Hanoi\"\n",
+    "    CITY = None  \n",
     "\n",
     "city_slug = slugify(CITY) if CITY else None\n",
     "\n",
-    "# pick RAW source: prefer folder of city_slug; else latest any\n",
     "candidates = []\n",
     "if city_slug:\n",
     "    candidates = sorted(glob(f\"{RAW_DIR}/{city_slug}/forecast_*.csv\"))\n",
@@ -85,12 +88,11 @@
     "else:\n",
     "    df = pd.read_csv(src)\n",
     "\n",
-    "    # If CITY not set, derive city_slug from file content or folder name\n",
     "    if not city_slug:\n",
     "        if \"city\" in df.columns and len(df):\n",
     "            city_slug = slugify(df[\"city\"].iloc[0])\n",
     "        else:\n",
-    "            city_slug = Path(src).parent.name  # raw/<city_slug>/\n",
+    "            city_slug = Path(src).parent.name  \n",
     "    ts = datetime.now().strftime(\"%Y%m%d_%H%M\")\n",
     "\n",
     "    # ===== Schema check =====\n",
@@ -104,12 +106,12 @@
     "            issues.append(f\"{col} not numeric\")\n",
     "    print(\"Schema OK.\" if not issues else f\"Validation issues: {issues}\")\n",
     "\n",
-    "    # Interim (city+ts)\n",
+    "    # ===== Save interim checked =====\n",
     "    interim_path = f\"{INTERIM_DIR}/checked_{ts}.csv\"\n",
     "    df.to_csv(interim_path, index=False)\n",
     "    print(\"Saved interim:\", interim_path)\n",
     "\n",
-    "    # ===== Clean =====\n",
+    "    # ===== Cleaning =====\n",
     "    dfc = df.copy()\n",
     "    dfc[\"date\"] = pd.to_datetime(dfc[\"date\"], errors=\"coerce\")\n",
     "    dfc = dfc.drop_duplicates([\"city\",\"date\"]).sort_values(\"date\").reset_index(drop=True)\n",
