--- a/notebooks/2.4_modeling_evaluation.ipynb
+++ b/notebooks/2.4_modeling_evaluation.ipynb
@@ -20,7 +20,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Load config written by 2.2 ---\n",
     "import json, os, re\n",
     "from pathlib import Path\n",
     "\n",
@@ -48,7 +47,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2.4 Modeling & Evaluation — respect CITY, fallback latest\n",
     "import os, re\n",
     "from glob import glob\n",
     "from pathlib import Path\n",
@@ -64,15 +62,13 @@
     "def slugify(s: str) -> str:\n",
     "    return re.sub(r\"[^a-z0-9]+\", \"-\", str(s).lower()).strip(\"-\")\n",
     "\n",
-    "# --- OPTIONAL: set CITY here for testing; comment out to auto-pick latest\n",
     "try:\n",
-    "    CITY  # keep if already set\n",
+    "    CITY  # 2.2 setting-ed\n",
     "except NameError:\n",
-    "    CITY = None  # e.g., \"Hanoi\"\n",
+    "    CITY = None # fallback to None\n",
     "\n",
     "city_slug = slugify(CITY) if CITY else None\n",
     "\n",
-    "# pick features: by city if given, else latest any\n",
     "if city_slug:\n",
     "    candidates = sorted(glob(f\"../data/processed/{city_slug}/features_*.csv\"))\n",
     "else:\n",
@@ -85,7 +81,6 @@
     "\n",
     "df = pd.read_csv(feat_path)\n",
     "\n",
-    "# Derive city_slug from data if needed\n",
     "if not city_slug:\n",
     "    if \"city\" in df.columns and len(df):\n",
     "        city_slug = slugify(df[\"city\"].iloc[0])\n",
