--- a/notebooks/2.1_business_understanding.ipynb
+++ b/notebooks/2.1_business_understanding.ipynb
@@ -10,11 +10,11 @@
     "\n",
     "**Mục tiêu.** Xây dựng một quy trình xử lý dữ liệu để chuẩn bị cho việc trực quan hoá và phân tích dữ liệu.\n",
     "\n",
-    "**Đối tượng** Người dùng cần dữ liệu trực quan cho dự báo thời tiết trong 7 ngày tới lẫn lịch sử nhiệt độ/độ ẩm/tốc độ gió trong 1 năm trước để đưa ra gợi ý cần thiết.\n",
+    "**Đối tượng.** Người dùng cần dữ liệu trực quan cho dự báo thời tiết trong 7 ngày tới lẫn lịch sử nhiệt độ/độ ẩm/tốc độ gió trong 1 năm trước để đưa ra gợi ý cần thiết.\n",
     "\n",
     "**Từ câu hỏi đến phương pháp**\n",
     "1. *Mô Tả:* Xu hướng nhiệt độ, lượng mưa và gió trong 7 ngày tới ra sao?\n",
-    "2. *Dự đoán:* Ngày nào có khả năng mưa? (Phân loại nhị phân: mưa/không mưa)\n",
+    "2. *Dự đoán:* Ngày nào có khả năng mưa? (Phân loại nhị phân: mưa/không mưa). Nhiệt độ cao nhất, thứ 3 có phải ngày có nhiệt độ cao nhất không?(Phân loại nhị nhân: có/không).\n",
     "3. *(Optional) Dự báo:* Sử dụng dự báo bên ngoài (Open-Meteo) thay vì tự huấn luyện mô hình chuỗi thời gian\n",
     "\n",
     "**Yêu cầu tối thiểu:**\n",
@@ -32,7 +32,7 @@
    "source": [
     "\n",
     "## Cấu trúc dự án\n",
-    "```\n",
+    "``` \n",
     "lab2_ADY201m/\n",
     "├─ data/raw/           #  dữ liệu API thô\n",
     "├─ data/interim/       # Dữ liệu hậu xử lí sơ bộ/checkpoint trước khi clean\n",
